--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Simple House Template</title>
+    <title>Simple House BY CAPSLOCK</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400" rel="stylesheet" />    
 	<link href="css/templatemo-style.css" rel="stylesheet" />
 </head>
@@ -28,7 +28,7 @@ https://templatemo.com/tm-539-simple-house
 						<div class="col-md-6 col-12">
 							<img src="img/simple-house-logo.png" alt="Logo" class="tm-site-logo" /> 
 							<div class="tm-site-text-box">
-								<h1 class="tm-site-title">Simple House</h1>
+								<h1 class="tm-site-title">CAPSLOCK</h1>
 								<h6 class="tm-site-description">new restaurant template</h6>	
 							</div>
 						</div>
@@ -294,9 +294,9 @@ https://templatemo.com/tm-539-simple-house
 		</main>
 
 		<footer class="tm-footer text-center">
-			<p>Copyright &copy; 2020 Simple House 
+			<p>Copyright &copy; 2020 CAPSLOCK
             
-            | Design: <a rel="nofollow" href="https://templatemo.com">TemplateMo</a></p>
+            | Design: <a rel="nofollow" href="https://templatemo.com">CAPSLOCK</a></p>
 		</footer>
 	</div>
 	<script src="js/jquery.min.js"></script>
